# pro_py

./: README.md  epargnes.csv  main.py  personnes.csv  pyproject.toml
src/mon_module/: core.py  utils.py
src/mon_module/models/: epargne.py  personne.py  resultat.py
tests/: test_core.py  test_epargne.py  test_personne.py  test_resultat.py  test_utils.py
