[project]
name = "mon_projet"
version = "0.1.0"
description = "Un projet Python structuré proprement"
authors = [
    { name = "MCB", email = "tonmail@example.com" }
]
dependencies = [
    "pandas>=2.0",
    "requests",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--import-mode=importlib",
]